force-app/main/default/objects/License__c/fields/Licence_Expiry_30_Day__c.field-meta.xml
<CustomField>
    <fullName>Licence_Expiry_30_Day__c</fullName>
    <formula>License_Expiration_Date__c - 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licence Expiry 30 Day</label>
    <type>Date</type>
</CustomField>