force-app/main/default/objects/License__c/fields/License_Key__c.field-meta.xml
<CustomField>
    <fullName>License_Key__c</fullName>
    <displayFormat>L-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>License Key</label>
    <type>AutoNumber</type>
</CustomField>