force-app/main/default/objects/License__c/fields/PrismLicenseID__c.field-meta.xml
<CustomField>
    <fullName>PrismLicenseID__c</fullName>
    <label>PrismLicenseID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>