force-app/main/default/objects/License__c/fields/SoftDeleted__c.field-meta.xml
<CustomField>
    <fullName>SoftDeleted__c</fullName>
    <label>SoftDelete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>