force-app/main/default/objects/License__c/fields/Upper_License__c.field-meta.xml
<CustomField>
    <fullName>Upper_License__c</fullName>
    <formula>UPPER( Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upper License</label>
    <type>Text</type>
</CustomField>