force-app/main/default/objects/License__c/listViews/license_new_view_test_of_data_migration.listView-meta.xml
<ListView>
    <fullName>license_new_view_test_of_data_migration</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>License_State__c</columns>
    <columns>License_Expiration_Date__c</columns>
    <columns>License_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>license new view test of data migration</label>
</ListView>