force-app/main/default/objects/License__c/listViews/License_View.listView-meta.xml
<ListView>
    <fullName>License_View</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>License_State__c</columns>
    <columns>License_Expiration_Date__c</columns>
    <columns>License_Type__c</columns>
    <columns>PrismLicenseID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>License View</label>
</ListView>