force-app/main/default/objects/License__c/listViews/licenses_for_production_set_up.listView-meta.xml
<ListView>
    <fullName>licenses_for_production_set_up</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>License_State__c</columns>
    <columns>License_Expiration_Date__c</columns>
    <columns>License_Type__c</columns>
    <columns>SoftDeleted__c</columns>
    <filterScope>Everything</filterScope>
    <label>License View</label>
</ListView>